change in html and css

--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@
                         <div class="project-card">
                             <div class="project-name">Movie Recommender System</div>
                             <div class="project-image">
-                                <img src="/img/project.png" alt="Halcyon Theme">
-                                <img src="/img/project.png" alt="Movie Recommender System">
+                                <img src="/img/mrs.png" alt="Movie Recommender System">
+                                <img src="/img/mrs.png" alt="Movie Recommender System">
+                                <img src="/img/mrs.png" alt="Movie Recommender System">
                             </div>
                             <div class="project-content">
                                 <div class="project-title">
@@ -298,7 +299,7 @@
                                     <span class="tech-tag">BeautifulSoup</span>
                                     <span class="tech-tag">FastAPI</span>
                                     <span class="tech-tag">Pydantic</span>
-                                    <span class="tech-tag">HTML/CSS/JS</span>
+                                    <span class="tech-tag">HTML</span>
                                     <span class="tech-tag">Docker</span>
                                     <span class="tech-tag">Render</span>
                                 </div>
