--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     <div class="video-container">
                                         <iframe 
                                             class="embed-responsive-item" 
-                                            src="https://www.youtube.com/embed/3-S-LxZ4N94" 
+                                            src="https://youtu.be/Hy6lUa30AfU" 
                                             frameborder="0" 
                                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                             allowfullscreen>
