--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-header">
-                    <img src="img/profile.jpg" alt="Image" class="glow-img">
+                    <img src="img/profile.png" alt="Image" class="glow-img">
                 </div>
                 <div class="social-links text-center">
                     <a href="https://www.linkedin.com/in/abhishekkumarbj/"><i class="fab fa-linkedin-in"></i></a>
