--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-header">
-                    <img src="img/profile.jpg" alt="Image" class="glow-img">
+                    <img src="img/profile.png" alt="Image" class="glow-img">
                 </div>
                 <div class="social-links text-center">
                     <a href="https://www.linkedin.com/in/abhishekkumarbj/"><i class="fab fa-linkedin-in"></i></a>
@@ -97,7 +97,7 @@
                                     <div class="video-container">
                                         <iframe 
                                             class="embed-responsive-item" 
-                                            src="https://www.youtube.com/embed/3-S-LxZ4N94" 
+                                            src="https://www.youtube.com/embed/Hy6lUa30AfU" 
                                             frameborder="0" 
                                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                             allowfullscreen>
@@ -111,7 +111,7 @@
                                     </p>                                    
                                 </div>
                                 <div class="download">
-                                    <a class="btn" href="https://drive.google.com/file/d/1UntrRq1Sj-jVjNCIQPQtUR-_whzW9VTR/view?usp=sharing" target="_blank">
+                                    <a class="btn" href="https://drive.google.com/file/d/1FEZ6z_dET2aRs_73im84dk5fck-IkAJt/view?usp=sharing" target="_blank">
                                     <i class="fa fa-download"></i> Resume
                                     </a>                                    
                                 </div>
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-sns"></div>
-                                    <div class="tech-name">Seaborn</div>
+                                    <div class="tech-name">FastAPI</div>
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-sklearn"></div>
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-pytorch"></div>
-                                    <div class="tech-name">Pytorch</div>
+                                    <div class="tech-name">AWS</div>
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-mysql"></div>
@@ -158,7 +158,7 @@
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-mongodb"></div>
-                                    <div class="tech-name">MongoDB</div>
+                                    <div class="tech-name">CrewAI</div>
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-docker"></div>
@@ -166,7 +166,7 @@
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-tenser"></div>
-                                    <div class="tech-name">TenserFlow</div>
+                                    <div class="tech-name">LangChain</div>
                                 </div>
                                 <div class="tech-card">
                                     <div class="tech-icon icon-tex"></div>
@@ -186,7 +186,7 @@
                         <div class="row align-items-center">
                             <div class="col-12">
                                 <div class="edu-col">
-                                    <span>01-Jan-2022 <i>to</i> 31-may-2024</span>
+                                    <span>01-Jan-2022 <i>to</i> Expected-2026</span>
                                     <h3>Master of Science (M.Sc.) in Mathematics</h3>
                                     <p>I am currently pursuing my Master’s degree in Mathematics from Mumbai University, focusing on advanced mathematics, statistics, and problem-solving, with applications in data science and programming.</p>
                                 </div>
