--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     </p>                                    
                                 </div>
                                 <div class="download">
-                                    <a class="btn" href="https://drive.google.com/file/d/16XVVZJTnrUAhtOsHlta-Y-Ic3a7plH0m/view?usp=drive_link" target="_blank">
+                                    <a class="btn" href="https://drive.google.com/file/d/16XVVZJTnrUAhtOsHlta-Y-Ic3a7plH0m/view?usp=sharing" target="_blank">
                                     <i class="fa fa-download"></i> Resume
                                     </a>                                    
                                 </div>
